--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,10 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
-      "sizes": "64x64",
+      "src": "/images/icons/fox-icon.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
-    
   ],
   "splash_pages": null
 }
