--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "HMS",
   "short_name": "HMS",
-  "theme_color": "#000022;",
-  "background_color": "#000022;",
+  "theme_color": "#000022",
+  "background_color": "#000022",
   "display": "standalone",
   "Scope": "/",
   "start_url": "/",
